templates/tenants/deployments/web2/01-frontenddeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server2
  namespace: web2
spec:
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.48-alpine3.14
        ports:
        - containerPort: 80
