templates/tenants/deployments/web2/02-frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service2
  namespace: web2
spec:
  selector:
    app: web2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
